--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="centered">
-    <h1>Login</h1>
+    <h1>Register</h1>
     <form [formGroup]=registerFormGroup>
         <mat-form-field class="full-width">
             <mat-label>Name</mat-label>
