--- a/frontend/src/app/products/products/products.component.html
+++ b/frontend/src/app/products/products/products.component.html
@@ -4,15 +4,15 @@
     <div fxLayout="row wrap" fxLayoutGap="16px grid">
         <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%" class="card" *ngFor="let product of products">
             <mat-card>
-                <img mat-card-image [src]=product.image alt="Photo of a Shiba Inu">
+                <img mat-card-image [src]=product.image alt="Product image">
                 <mat-card-content>
                     <h2>{{product.name}}</h2>
                     <p class="description">{{product.description}}</p>
                     <span class="price">&euro;{{product.price}}</span>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-button>View</button>
-                    <button mat-button>Add to cart</button>
+                    <button mat-button (click)="navigateToProductPage(product)">View</button>
+                    <button mat-button (click)="addProductToCart(product)">Add to cart</button>
                 </mat-card-actions>
             </mat-card>
         </div>
