--- a/frontend/src/app/admin/admin.component.css
+++ b/frontend/src/app/admin/admin.component.css
@@ -16,3 +16,24 @@
 .card {
     max-width: 320px;
 }
+
+form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+}
+  
+.full-width {
+    width: 100%;
+}
+
+.centered {
+    width: 500px;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 1em;
+}
+
+button {
+    margin: 0 1em;
+}
