--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -17,4 +17,44 @@
             </mat-card>
         </div>
     <div>
+
+    <div class="centered">
+        <h1>Create Product</h1>
+        <form [formGroup]=productFormGroup>
+            <mat-form-field class="full-width">
+                <mat-label>Name</mat-label>
+                <input type="text" matInput formControlName="name">
+                <mat-error *ngIf="nameFormControl.hasError('required')">
+                Name is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="full-width">
+                <mat-label>Description</mat-label>
+                <input type="text" matInput formControlName="description">
+                <mat-error *ngIf="descriptionFormControl.hasError('required')">
+                    Description is <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+    
+                <mat-form-field class="full-width">
+                <mat-label>Image</mat-label>
+                <input type="text" matInput formControlName="image">
+                <mat-error *ngIf="imageFormControl.hasError('required')">
+                    Image is <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+    
+                <mat-form-field class="full-width">
+                <mat-label>Price</mat-label>
+                <input type="number" matInput formControlName="price">
+                <mat-error *ngIf="priceFormControl.hasError('required')">
+                    Price is <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+        
+            <button mat-raised-button color="primary" (click)="createProduct()">Create</button>
+            <button mat-raised-button color="warn" (click)="clear()">Clear</button>
+            </form>
+    </div>
 </div>
